damn you! horizontal scroll! (fixed)

--- a/blocks/photo-grid/__items/photo-grid__items.css
+++ b/blocks/photo-grid/__items/photo-grid__items.css
@@ -15,7 +15,7 @@
 @media screen and (min-width: 600px) {
   .photo-grid__items {
     gap: 16px;
-    grid-template-columns: repeat(2, minmax(288px, 1fr));
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
   }
 }
 
