--- a/pages/index.css
+++ b/pages/index.css
@@ -54,3 +54,7 @@
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+.scroll {
+  height: 1800px;
+}
